unpackaged/objects/Family_Member__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Family Members</relationshipLabel>
        <relationshipName>Family_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relationship_to_student__c</fullName>
        <label>Relationship to student</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Family Member</label>
    <nameField>
        <label>Family Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>